--- a/app/dashboard-projects-portfolio.html
+++ b/app/dashboard-projects-portfolio.html
@@ -45,7 +45,7 @@
           <li class="nav-item dropdown usernav">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/media/user.jpg" alt="UserName"></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">portfolio</a>
               <a class="dropdown-item" href="#">Edit</a>
               <a class="dropdown-item" href="#">Logout</a>
             </div>
@@ -96,8 +96,8 @@
                     <i class="fa fa-pie-chart fa-2x pull-left mr-3" aria-hidden="true"></i>
                       <div class="pull-right">
                       <p class="numb">87%</p>
-                      <p><i><b>Profile</b></i> Completion</p>
-                      <a href="">Edit Profile</a>
+                      <p><i><b>portfolio</b></i> Completion</p>
+                      <a href="">Edit portfolio</a>
                     </div>
                   </li>
                   <li>
@@ -143,14 +143,21 @@
 
 
 
-              <div class="dashboard-update mt-5">
-                <h5 class="title-blue">My Profile </h5>
+              <div class="dashboard-update dashboard-portfolio mt-5">
+                <h4 class="title-blue">My Portfolio </h4>
                 <ul class="list-group">
                   <li class="list-group-item">
-                    <h3>Profile #1</h3>
-                    <p class="date">Due Date: 23/12/2017</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h3>portfolio #1</h3>
+                    <h5>Date:</h5>
+                    <p class="date">23/12/2017</p>
+                    <h5>Desc:</h5>
+                    <p>desc for the project There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 1:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 2:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>object 3:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
 
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail m-4">
 
@@ -164,12 +171,18 @@
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail  m-4">
 
                   </li>
-
                   <li class="list-group-item">
-                    <h3>Profile #2</h3>
-                    <p class="date">Due Date: 23/12/2017</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h3>portfolio #1</h3>
+                    <h5>Date:</h5>
+                    <p class="date">23/12/2017</p>
+                    <h5>Desc:</h5>
+                    <p>desc for the project There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 1:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 2:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>object 3:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
 
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail m-4">
 
@@ -183,12 +196,18 @@
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail  m-4">
 
                   </li>
-
                   <li class="list-group-item">
-                    <h3>Profile #3</h3>
-                    <p class="date">Due Date: 23/12/2017</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h3>portfolio #1</h3>
+                    <h5>Date:</h5>
+                    <p class="date">23/12/2017</p>
+                    <h5>Desc:</h5>
+                    <p>desc for the project There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 1:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 2:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>object 3:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
 
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail m-4">
 
@@ -202,12 +221,18 @@
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail  m-4">
 
                   </li>
-
                   <li class="list-group-item">
-                    <h3>Profile #4</h3>
-                    <p class="date">Due Date: 23/12/2017</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h3>portfolio #1</h3>
+                    <h5>Date:</h5>
+                    <p class="date">23/12/2017</p>
+                    <h5>Desc:</h5>
+                    <p>desc for the project There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 1:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>case item 2:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
+                    <h5>object 3:</h5>
+                    <p> There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described as the “chocolate lover’s dream...</p>
 
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail m-4">
 
@@ -221,6 +246,7 @@
                     <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16929ac7efb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16929ac7efb%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2273.96666717529297%22%20y%3D%22104.2%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="..." class="img-thumbnail  m-4">
 
                   </li>
+
                 </ul>
               </div>
             </div>
