--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,7 @@
               <li class="list-group-item"><a href="error-404.html">Error 404</a></li>
               <li class="list-group-item"><a href="about-team.html">About Team</a></li>
               <li class="list-group-item"><a href="partnerships-page.html">Partnerships Page</a></li>
-
-
+              <li class="list-group-item"><a href="dashboard-projects-portfolio.html">Dashboard Projects Portfolio (NEW)</a></li>
             </ul>
           </div>
           <div class="col-md-6">
